--- a/core/design/src/main/res/values/strings.xml
+++ b/core/design/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Language App</string>
-    <string name="go_back_icon_content_description">Вернуться назад</string>
+    <string name="go_back_icon_content_description">Go back</string>
+    <string name="login_toggle_password_visibility">Toggle password visibility</string>
 </resources>
