--- a/features/auth/compose-impl/src/main/res/values/strings.xml
+++ b/features/auth/compose-impl/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="google">Google</string>
 
     <string name="login">Login</string>
+    <string name="login_success">Successfully authorized!</string>
     <string name="login_logo_title">For free, join now and start learning</string>
     <string name="login_email">Email Address</string>
     <string name="login_email_hint">Email</string>
@@ -15,4 +16,8 @@
     <string name="login_use_google_after_annotation">for sign in</string>
 
     <string name="signup">Signup</string>
+
+    <string name="error_smth_went_wrong">Something went wrong :(</string>
+    <string name="error_check_your_creds">Error. Check your credentials!</string>
+    <string name="error_empty_field">This field is required</string>
 </resources>
