--- a/features/auth/compose-impl/src/main/res/values/strings.xml
+++ b/features/auth/compose-impl/src/main/res/values/strings.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="google">Google</string>
+    <string name="first_name">First Name</string>
+    <string name="your_first_name">Your First Name</string>
+    <string name="last_name">Last name</string>
+    <string name="your_last_name">Your Last name</string>
+    <string name="email_address">Email Address</string>
+    <string name="email">Email</string>
+    <string name="button_continue">Continue</string>
+    <string name="password">Password</string>
+    <string name="confirm_password">Confirm Password</string>
 
     <string name="login">Login</string>
     <string name="sign_in_success">Successfully authorized!</string>
     <string name="sign_in_logo_title">For free, join now and start learning</string>
-    <string name="sign_in_email">Email Address</string>
-    <string name="sign_in_email_hint">Email</string>
-    <string name="sign_in_password">Password</string>
     <string name="sign_in_forgot_password">Forgot Password</string>
     <string name="sign_in_not_you_member_before_annotation">Not you member?</string>
     <string name="sign_in_not_you_member_annotation">Signup</string>
@@ -16,6 +22,10 @@
     <string name="sign_in_use_google_after_annotation">for sign in</string>
 
     <string name="signup">Signup</string>
+    <string name="signup_create_account">Create an Account</string>
+    <string name="signup_already_you_member_before_annotation">Already you member?</string>
+    <string name="signup_already_you_member_after_annotation">Login</string>
+    <string name="signup_choose_password">Choose a Password</string>
 
     <string name="error_smth_went_wrong">Something went wrong :(</string>
     <string name="error_check_your_creds">Error. Check your credentials!</string>
