--- a/core/design/src/main/res/values/strings.xml
+++ b/core/design/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_name">Language App</string>
     <string name="go_back_icon_content_description">Go back</string>
     <string name="toggle_password_visibility">Toggle password visibility</string>
+    <string name="finish_positive">Finish!</string>
 </resources>
