--- a/features/main/compose-impl/src/main/res/values/strings.xml
+++ b/features/main/compose-impl/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="accessibility_go_to_profile">Go to profile</string>
 
+    <string name="main_app_bar_title">Hello!</string>
+    <string name="main_app_bar_title_named">Hello, %1$s</string>
+    <string name="main_app_bar_description">Are you ready for learning today?</string>
 </resources>
