--- a/core/design/src/main/res/values/strings.xml
+++ b/core/design/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="finish">Finish</string>
     <string name="finish_positive">Finish!</string>
     <string name="ok_positive">OK!</string>
+    <string name="full_name_formatted">%1$s %2$s</string>
 </resources>
