--- a/core/design/src/main/res/values-ru/strings.xml
+++ b/core/design/src/main/res/values-ru/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="accessibility_go_to_profile">Перейти в профиль</string>
+
     <string name="app_name">Language App</string>
     <string name="go_back_icon_content_description">Вернуться назад</string>
     <string name="toggle_password_visibility">Переключить видимость пароля</string>
