feature: profile screen user data loading implemented

--- a/core/design/src/main/res/values-ru/strings.xml
+++ b/core/design/src/main/res/values-ru/strings.xml
@@ -10,6 +10,7 @@
     <string name="ok_positive">OK!</string>
     <string name="full_name_formatted">%2$s %1$s</string>
     <string name="choose">Выбрать</string>
+    <string name="profile_name_unknown">Неизвестен</string>
 
     <string name="error_smth_went_wrong">Что-то пошло не так :(</string>
     <string name="error_smth_went_wrong_description">Пожалуйста, попробуйте позже</string>
