--- a/core/design/src/main/res/values/strings.xml
+++ b/core/design/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="ok_positive">OK!</string>
     <string name="full_name_formatted">%1$s %2$s</string>
     <string name="choose">Choose</string>
+    <string name="profile_name_unknown">Unknown</string>
 
     <string name="error_smth_went_wrong">Something went wrong :(</string>
     <string name="error_smth_went_wrong_description">Please try again later</string>
