feature: guess animal points increasing implemented

--- a/features/main/compose-impl/src/main/res/values-ru/strings.xml
+++ b/features/main/compose-impl/src/main/res/values-ru/strings.xml
@@ -11,5 +11,5 @@
     <string name="main_audition">Прослушивание</string>
     <string name="main_game">Игра</string>
 
-    <string name="main_points_formatted">%1$d очков</string>
+    <string name="main_points_formatted">%1$.1f очков</string>
 </resources>
